# web-frameworks-benchmark

./: .gitignore  README.md
go/go-http/server/: app.go
go/http/go-http/: go.mod  main.go
go/http/go-http/dto/: book.go
java/springboot3-mvc/: build.gradle  pom.xml  settings.gradle
java/springboot3-mvc/src/main/java/com/songday/benchmark/springboot3mvc/: PersonController.java  Response.java  Springboot3MvcApplication.java  dto.java
java/springboot3-mvc/src/main/resources/: application.properties
java/springboot3-mvc/src/test/java/com/songday/benchmark/springboot3mvc/: Springboot3MvcApplicationTests.java
java/springboot3-native/: pom.xml
java/springboot3-native/src/main/java/com/songday/benchmark/springboot3native/: Springboot3NativeApplication.java
java/springboot3-native/src/test/java/com/songday/benchmark/springboot3native/: Springboot3NativeApplicationTests.java
java/springboot3-webflux/: build.gradle  pom.xml  settings.gradle
java/springboot3-webflux/src/main/resources/: application.properties
rust/axum-rs/: Cargo.toml
rust/axum-rs/src/: db.rs  lib.rs  main.rs
rust/axum-rs/src/dto/: book.rs  mod.rs
rust/axum-rs/src/facade/: book.rs  mod.rs
rust/axum-rs/src/model/: book.rs  mod.rs
rust/axum-rs/src/server/: app.rs  mod.rs  router.rs
rust/axum-rs/src/service/: book.rs
rust/warp-rs/: Cargo.toml
rust/warp-rs/src/: lib.rs  main.rs
rust/warp-rs/src/dto/: book.rs  mod.rs
rust/warp-rs/src/facade/: book.rs  mod.rs
rust/warp-rs/src/server/: app.rs  router.rs
rust/warp-rs/src/service/: book.rs
(+38 files in other folders)
