[package]
name = "axum-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.11"
serde = {version="1", features = ["derive"]}
serde_json = "1"
time = "0.3"
tokio = {version="1.19", features=["macros", "rt", "rt-multi-thread"]}
