[package]
name = "axum-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
once_cell = "1.16"
serde = {version="1", features = ["derive"]}
serde_json = "1"
scru128 = "2.3.0"
sqlx = { version = "0.6", default-features = false, features = [ "runtime-tokio-rustls", "macros", "mysql", "time"], optional = false }
time = {version="0.3", features=["std", "formatting"]}
tokio = {version="1.23", features=["rt", "rt-multi-thread", "time"]}
